log
Wed, Mar 26, 2025  8:41:28 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:5: error: expected ';' before 'return'
     return list;
     ^~~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Wed, Mar 26, 2025  8:41:46 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c82cc38
Wed, Mar 26, 2025  8:45:29 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:43: error: 'Node {aka struct Node}' has no member named 'key'
     if(list->current) return list->current->key;
                                           ^~
Compilation failed
2fc4ae2
